[tool.poetry]
name = "finance-tracker-shared"
version = "0.1.0"
description = "Shared utilities and schema for finance-tracker"
authors = ["Jack Pridgeon <jack.pridgeon@outlook.com>"]
readme = "README.md"
packages = [{ include = "finance_tracker_shared" }]
python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
pydantic = "2.6.4"
pycountry = "24.6.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
