[project]
name = "finance-tracker-shared"
version = "0.1.0"
description = "Shared utilities and schema for finance-tracker"
authors = [
    {name = "Jack Pridgeon",email = "jack.pridgeon@outlook.com"}
]
packages = [{ include = "finance_tracker_shared" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pycountry==24.6.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
